parser/antlr_generated/python/POUParser.py
# Generated from POU.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class POUParser ( Parser ):

    grammarFileName = "POU.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PROGRAM'", "'FUNCTION_BLOCK'", "'{'", 
                     "'CodeWorksheet'", "':='", "','", "'Type'", "'''", 
                     "'}'", "'VariableWorksheet'", "''Variables''", "'GroupDefinition'", 
                     "'('", "')'", "'Group'", "'END_VAR'", "'SAFEUSINT'", 
                     "'SAFETRUE'", "'SAFEFALSE'", "'Feedback'", "'true'", 
                     "'LINE'", "':'", "';'", "'ANALOG'", "'BOOL'", "'BYTE'", 
                     "'WORD'", "'DWORD'", "'LWORD'", "'SINT'", "'INT'", 
                     "'DINT'", "'LINT'", "'USINT'", "'UINT'", "'UDINT'", 
                     "'ULINT'", "'REAL'", "'LREAL'", "'TIME'", "'DATE'", 
                     "'DT'", "'TOD'", "'STRING'", "'WSTRING'", "'SAFEANALOG'", 
                     "'SAFEBOOL'", "'SAFEBYTE'", "'SAFEDINT'", "'SAFEDWORD'", 
                     "'SAFEINT'", "'SAFESINT'", "'SAFETIME'", "'SAFEUDINT'", 
                     "'SAFEUINT'", "'SAFEWORD'", "'ARRAY'", "'DERIVED'", 
                     "'ENUM'", "'SUBRANGESIGNED'", "'SUBRANGEUNSIGNED'", 
                     "'STRUCT'", "'ANY'", "'ANY_DERIVED'", "'ANY_ELEMENTARY'", 
                     "'ANY_MAGNITUDE'", "'ANY_NUM'", "'ANY_REAL'", "'ANY_INT'", 
                     "'ANY_BIT'", "'ANY_STRING'", "'ANY_DATE'", "'VAR'", 
                     "'VAR_INPUT'", "'VAR_OUTPUT'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WS", "QUOTED_STRING", "INT", "ID", "FILE_EXT", 
                      "DESCRIPTION" ]

    RULE_safe_program_POU = 0
    RULE_pou_type = 1
    RULE_codeWorkSheet = 2
    RULE_variableWorkSheet = 3
    RULE_varGroups = 4
    RULE_groupDefs = 5
    RULE_groupDef = 6
    RULE_varDefGroups = 7
    RULE_varDefGroup = 8
    RULE_valTypeRule = 9
    RULE_feedbackRule = 10
    RULE_varLine = 11
    RULE_val_Type = 12
    RULE_elementary_type = 13
    RULE_safe_type = 14
    RULE_derived_type = 15
    RULE_generic_type = 16
    RULE_var_type = 17

    ruleNames =  [ "safe_program_POU", "pou_type", "codeWorkSheet", "variableWorkSheet", 
                   "varGroups", "groupDefs", "groupDef", "varDefGroups", 
                   "varDefGroup", "valTypeRule", "feedbackRule", "varLine", 
                   "val_Type", "elementary_type", "safe_type", "derived_type", 
                   "generic_type", "var_type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    WS=77
    QUOTED_STRING=78
    INT=79
    ID=80
    FILE_EXT=81
    DESCRIPTION=82

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Safe_program_POUContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.varWS = None # VariableWorkSheetContext

        def pou_type(self):
            return self.getTypedRuleContext(POUParser.Pou_typeContext,0)


        def ID(self):
            return self.getToken(POUParser.ID, 0)

        def codeWorkSheet(self):
            return self.getTypedRuleContext(POUParser.CodeWorkSheetContext,0)


        def EOF(self):
            return self.getToken(POUParser.EOF, 0)

        def variableWorkSheet(self):
            return self.getTypedRuleContext(POUParser.VariableWorkSheetContext,0)


        def getRuleIndex(self):
            return POUParser.RULE_safe_program_POU

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSafe_program_POU" ):
                listener.enterSafe_program_POU(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSafe_program_POU" ):
                listener.exitSafe_program_POU(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSafe_program_POU" ):
                return visitor.visitSafe_program_POU(self)
            else:
                return visitor.visitChildren(self)




    def safe_program_POU(self):

        localctx = POUParser.Safe_program_POUContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_safe_program_POU)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.pou_type()
            self.state = 37
            self.match(POUParser.ID)
            self.state = 38
            localctx.varWS = self.variableWorkSheet()
            self.state = 39
            self.codeWorkSheet()
            self.state = 40
            self.match(POUParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pou_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return POUParser.RULE_pou_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPou_type" ):
                listener.enterPou_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPou_type" ):
                listener.exitPou_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPou_type" ):
                return visitor.visitPou_type(self)
            else:
                return visitor.visitChildren(self)




    def pou_type(self):

        localctx = POUParser.Pou_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pou_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeWorkSheetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTED_STRING(self):
            return self.getToken(POUParser.QUOTED_STRING, 0)

        def FILE_EXT(self):
            return self.getToken(POUParser.FILE_EXT, 0)

        def getRuleIndex(self):
            return POUParser.RULE_codeWorkSheet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodeWorkSheet" ):
                listener.enterCodeWorkSheet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodeWorkSheet" ):
                listener.exitCodeWorkSheet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCodeWorkSheet" ):
                return visitor.visitCodeWorkSheet(self)
            else:
                return visitor.visitChildren(self)




    def codeWorkSheet(self):

        localctx = POUParser.CodeWorkSheetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_codeWorkSheet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(POUParser.T__2)
            self.state = 45
            self.match(POUParser.T__3)
            self.state = 46
            self.match(POUParser.T__4)
            self.state = 47
            self.match(POUParser.QUOTED_STRING)
            self.state = 48
            self.match(POUParser.T__5)
            self.state = 49
            self.match(POUParser.T__6)
            self.state = 50
            self.match(POUParser.T__4)
            self.state = 51
            self.match(POUParser.T__7)
            self.state = 52
            self.match(POUParser.FILE_EXT)
            self.state = 53
            self.match(POUParser.T__7)
            self.state = 54
            self.match(POUParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableWorkSheetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varGroups(self):
            return self.getTypedRuleContext(POUParser.VarGroupsContext,0)


        def getRuleIndex(self):
            return POUParser.RULE_variableWorkSheet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableWorkSheet" ):
                listener.enterVariableWorkSheet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableWorkSheet" ):
                listener.exitVariableWorkSheet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableWorkSheet" ):
                return visitor.visitVariableWorkSheet(self)
            else:
                return visitor.visitChildren(self)




    def variableWorkSheet(self):

        localctx = POUParser.VariableWorkSheetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableWorkSheet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(POUParser.T__2)
            self.state = 57
            self.match(POUParser.T__9)
            self.state = 58
            self.match(POUParser.T__4)
            self.state = 59
            self.match(POUParser.T__10)
            self.state = 60
            self.match(POUParser.T__8)
            self.state = 61
            self.varGroups()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarGroupsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def groupDefs(self):
            return self.getTypedRuleContext(POUParser.GroupDefsContext,0)


        def varDefGroups(self):
            return self.getTypedRuleContext(POUParser.VarDefGroupsContext,0)


        def getRuleIndex(self):
            return POUParser.RULE_varGroups

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarGroups" ):
                listener.enterVarGroups(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarGroups" ):
                listener.exitVarGroups(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarGroups" ):
                return visitor.visitVarGroups(self)
            else:
                return visitor.visitChildren(self)




    def varGroups(self):

        localctx = POUParser.VarGroupsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varGroups)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.groupDefs()
            self.state = 64
            self.varDefGroups()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupDefsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def groupDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(POUParser.GroupDefContext)
            else:
                return self.getTypedRuleContext(POUParser.GroupDefContext,i)


        def getRuleIndex(self):
            return POUParser.RULE_groupDefs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupDefs" ):
                listener.enterGroupDefs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupDefs" ):
                listener.exitGroupDefs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroupDefs" ):
                return visitor.visitGroupDefs(self)
            else:
                return visitor.visitChildren(self)




    def groupDefs(self):

        localctx = POUParser.GroupDefsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_groupDefs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 66
                self.groupDef()
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.groupID = None # Token
            self.groupName = None # Token

        def INT(self):
            return self.getToken(POUParser.INT, 0)

        def QUOTED_STRING(self):
            return self.getToken(POUParser.QUOTED_STRING, 0)

        def getRuleIndex(self):
            return POUParser.RULE_groupDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupDef" ):
                listener.enterGroupDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupDef" ):
                listener.exitGroupDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroupDef" ):
                return visitor.visitGroupDef(self)
            else:
                return visitor.visitChildren(self)




    def groupDef(self):

        localctx = POUParser.GroupDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_groupDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(POUParser.T__2)
            self.state = 72
            self.match(POUParser.T__11)
            self.state = 73
            self.match(POUParser.T__12)
            self.state = 74
            localctx.groupID = self.match(POUParser.INT)
            self.state = 75
            self.match(POUParser.T__5)
            self.state = 76
            localctx.groupName = self.match(POUParser.QUOTED_STRING)
            self.state = 77
            self.match(POUParser.T__13)
            self.state = 78
            self.match(POUParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDefGroupsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDefGroup(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(POUParser.VarDefGroupContext)
            else:
                return self.getTypedRuleContext(POUParser.VarDefGroupContext,i)


        def getRuleIndex(self):
            return POUParser.RULE_varDefGroups

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDefGroups" ):
                listener.enterVarDefGroups(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDefGroups" ):
                listener.exitVarDefGroups(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDefGroups" ):
                return visitor.visitVarDefGroups(self)
            else:
                return visitor.visitChildren(self)




    def varDefGroups(self):

        localctx = POUParser.VarDefGroupsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varDefGroups)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.varDefGroup()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la - 74)) & ~0x3f) == 0 and ((1 << (_la - 74)) & 7) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDefGroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.varType = None # Var_typeContext
            self.groupNr = None # Token

        def var_type(self):
            return self.getTypedRuleContext(POUParser.Var_typeContext,0)


        def INT(self):
            return self.getToken(POUParser.INT, 0)

        def varLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(POUParser.VarLineContext)
            else:
                return self.getTypedRuleContext(POUParser.VarLineContext,i)


        def getRuleIndex(self):
            return POUParser.RULE_varDefGroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDefGroup" ):
                listener.enterVarDefGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDefGroup" ):
                listener.exitVarDefGroup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDefGroup" ):
                return visitor.visitVarDefGroup(self)
            else:
                return visitor.visitChildren(self)




    def varDefGroup(self):

        localctx = POUParser.VarDefGroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varDefGroup)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            localctx.varType = self.var_type()
            self.state = 86
            self.match(POUParser.T__2)
            self.state = 87
            self.match(POUParser.T__14)
            self.state = 88
            self.match(POUParser.T__12)
            self.state = 89
            localctx.groupNr = self.match(POUParser.INT)
            self.state = 90
            self.match(POUParser.T__13)
            self.state = 91
            self.match(POUParser.T__8)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 92
                self.varLine()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(POUParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValTypeRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(POUParser.INT, 0)

        def getRuleIndex(self):
            return POUParser.RULE_valTypeRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValTypeRule" ):
                listener.enterValTypeRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValTypeRule" ):
                listener.exitValTypeRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValTypeRule" ):
                return visitor.visitValTypeRule(self)
            else:
                return visitor.visitChildren(self)




    def valTypeRule(self):

        localctx = POUParser.ValTypeRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_valTypeRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la - 17)) & ~0x3f) == 0 and ((1 << (_la - 17)) & 4611686018427387911) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeedbackRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return POUParser.RULE_feedbackRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeedbackRule" ):
                listener.enterFeedbackRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeedbackRule" ):
                listener.exitFeedbackRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeedbackRule" ):
                return visitor.visitFeedbackRule(self)
            else:
                return visitor.visitChildren(self)




    def feedbackRule(self):

        localctx = POUParser.FeedbackRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_feedbackRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(POUParser.T__2)
            self.state = 103
            self.match(POUParser.T__19)
            self.state = 104
            self.match(POUParser.T__12)
            self.state = 105
            self.match(POUParser.T__20)
            self.state = 106
            self.match(POUParser.T__13)
            self.state = 107
            self.match(POUParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.lineNr = None # Token
            self.varName = None # Token
            self.valueType = None # Val_TypeContext
            self.initVal = None # ValTypeRuleContext
            self.isFeedback = None # FeedbackRuleContext
            self.varDesc = None # Token

        def INT(self):
            return self.getToken(POUParser.INT, 0)

        def ID(self):
            return self.getToken(POUParser.ID, 0)

        def val_Type(self):
            return self.getTypedRuleContext(POUParser.Val_TypeContext,0)


        def valTypeRule(self):
            return self.getTypedRuleContext(POUParser.ValTypeRuleContext,0)


        def feedbackRule(self):
            return self.getTypedRuleContext(POUParser.FeedbackRuleContext,0)


        def DESCRIPTION(self):
            return self.getToken(POUParser.DESCRIPTION, 0)

        def getRuleIndex(self):
            return POUParser.RULE_varLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarLine" ):
                listener.enterVarLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarLine" ):
                listener.exitVarLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarLine" ):
                return visitor.visitVarLine(self)
            else:
                return visitor.visitChildren(self)




    def varLine(self):

        localctx = POUParser.VarLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_varLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(POUParser.T__2)
            self.state = 110
            self.match(POUParser.T__21)
            self.state = 111
            self.match(POUParser.T__12)
            self.state = 112
            localctx.lineNr = self.match(POUParser.INT)
            self.state = 113
            self.match(POUParser.T__13)
            self.state = 114
            self.match(POUParser.T__8)
            self.state = 115
            localctx.varName = self.match(POUParser.ID)
            self.state = 116
            self.match(POUParser.T__22)
            self.state = 117
            localctx.valueType = self.val_Type()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 118
                self.match(POUParser.T__4)
                self.state = 119
                localctx.initVal = self.valTypeRule()


            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 122
                localctx.isFeedback = self.feedbackRule()


            self.state = 125
            self.match(POUParser.T__23)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==82:
                self.state = 126
                localctx.varDesc = self.match(POUParser.DESCRIPTION)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Val_TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.custom_type = None # Token

        def elementary_type(self):
            return self.getTypedRuleContext(POUParser.Elementary_typeContext,0)


        def derived_type(self):
            return self.getTypedRuleContext(POUParser.Derived_typeContext,0)


        def generic_type(self):
            return self.getTypedRuleContext(POUParser.Generic_typeContext,0)


        def safe_type(self):
            return self.getTypedRuleContext(POUParser.Safe_typeContext,0)


        def ID(self):
            return self.getToken(POUParser.ID, 0)

        def getRuleIndex(self):
            return POUParser.RULE_val_Type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVal_Type" ):
                listener.enterVal_Type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVal_Type" ):
                listener.exitVal_Type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVal_Type" ):
                return visitor.visitVal_Type(self)
            else:
                return visitor.visitChildren(self)




    def val_Type(self):

        localctx = POUParser.Val_TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_val_Type)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.elementary_type()
                pass
            elif token in [58, 59, 60, 61, 62, 63]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.derived_type()
                pass
            elif token in [64, 65, 66, 67, 68, 69, 70, 71, 72, 73]:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.generic_type()
                pass
            elif token in [17, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57]:
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.safe_type()
                pass
            elif token in [80]:
                self.enterOuterAlt(localctx, 5)
                self.state = 133
                localctx.custom_type = self.match(POUParser.ID)
                pass
            else:
                raise NoViableAltException(self)
